[package]
name = "rusty-dna"
version = "0.1.0"
edition = "2024"
description = "Normalize consumer DNA genotype exports into structured SNP data via provider-specific parsers."
license = "MIT"
readme = "README.md"
keywords = ["dna", "genetics", "snp", "23andme", "ancestry"]
categories = ["science", "science::bioinformatics"]
